Fix FindCommand tests
* Fix multiple tutors and students found test cases
* Remove parser test cases as they belong in FindCommandParserTest